parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    Cuenta
    Elemento
    Menos
    Pri
    Ultimo

Grammar

Rule 0     S' -> statement
Rule 1     statement -> Var Space NAME Space EQUALS Space expression
Rule 2     statement -> Inic Space NAME Space EQUALS Space expression
Rule 3     statement -> Inic Space NAME Space EQUALS Space function
Rule 4     statement -> Var Space NAME
Rule 5     statement -> expression
Rule 6     expression -> INT
Rule 7     expression -> FLOAT
Rule 8     expression -> function
Rule 9     expression -> NAME
Rule 10    operaciones -> expression Space expression
Rule 11    operaciones -> expression Space operaciones
Rule 12    function -> Suma Space operaciones
Rule 13    function -> Inc Space NAME
Rule 14    function -> Inc Space NAME Space expression
Rule 15    function -> Azar Space expression
Rule 16    function -> Producto Space operaciones
Rule 17    function -> Potencia Space expression Space expression
Rule 18    function -> Division Space expression Space expression
Rule 19    function -> Resto Space expression Space expression
Rule 20    function -> RC Space expression
Rule 21    function -> Sen Space expression
Rule 22    function -> Elegir Space LeftSquareBracket operaciones RightSquareBracket
Rule 23    function -> Borrapantalla

Terminals, with rules where they appear

Azar                 : 15
Borrapantalla        : 23
Cuenta               : 
Division             : 18
EQUALS               : 1 2 3
Elegir               : 22
Elemento             : 
FLOAT                : 7
INT                  : 6
Inc                  : 13 14
Inic                 : 2 3
LeftSquareBracket    : 22
Menos                : 
NAME                 : 1 2 3 4 9 13 14
Potencia             : 17
Pri                  : 
Producto             : 16
RC                   : 20
Resto                : 19
RightSquareBracket   : 22
Sen                  : 21
Space                : 1 1 1 2 2 2 3 3 3 4 10 11 12 13 14 14 15 16 17 17 18 18 19 19 20 21 22
Suma                 : 12
Ultimo               : 
Var                  : 1 4
error                : 

Nonterminals, with rules where they appear

expression           : 1 2 5 10 10 11 14 15 17 17 18 18 19 19 20 21
function             : 3 8
operaciones          : 11 12 16 22
statement            : 0

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . Var Space NAME Space EQUALS Space expression
    (2) statement -> . Inic Space NAME Space EQUALS Space expression
    (3) statement -> . Inic Space NAME Space EQUALS Space function
    (4) statement -> . Var Space NAME
    (5) statement -> . expression
    (6) expression -> . INT
    (7) expression -> . FLOAT
    (8) expression -> . function
    (9) expression -> . NAME
    (12) function -> . Suma Space operaciones
    (13) function -> . Inc Space NAME
    (14) function -> . Inc Space NAME Space expression
    (15) function -> . Azar Space expression
    (16) function -> . Producto Space operaciones
    (17) function -> . Potencia Space expression Space expression
    (18) function -> . Division Space expression Space expression
    (19) function -> . Resto Space expression Space expression
    (20) function -> . RC Space expression
    (21) function -> . Sen Space expression
    (22) function -> . Elegir Space LeftSquareBracket operaciones RightSquareBracket
    (23) function -> . Borrapantalla

    Var             shift and go to state 2
    Inic            shift and go to state 5
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    NAME            shift and go to state 3
    Suma            shift and go to state 9
    Inc             shift and go to state 10
    Azar            shift and go to state 11
    Producto        shift and go to state 12
    Potencia        shift and go to state 13
    Division        shift and go to state 14
    Resto           shift and go to state 15
    RC              shift and go to state 16
    Sen             shift and go to state 17
    Elegir          shift and go to state 18
    Borrapantalla   shift and go to state 19

    statement                      shift and go to state 1
    expression                     shift and go to state 4
    function                       shift and go to state 6

state 1

    (0) S' -> statement .



state 2

    (1) statement -> Var . Space NAME Space EQUALS Space expression
    (4) statement -> Var . Space NAME

    Space           shift and go to state 20


state 3

    (9) expression -> NAME .

    $end            reduce using rule 9 (expression -> NAME .)
    Space           reduce using rule 9 (expression -> NAME .)
    RightSquareBracket reduce using rule 9 (expression -> NAME .)


state 4

    (5) statement -> expression .

    $end            reduce using rule 5 (statement -> expression .)


state 5

    (2) statement -> Inic . Space NAME Space EQUALS Space expression
    (3) statement -> Inic . Space NAME Space EQUALS Space function

    Space           shift and go to state 21


state 6

    (8) expression -> function .

    $end            reduce using rule 8 (expression -> function .)
    Space           reduce using rule 8 (expression -> function .)
    RightSquareBracket reduce using rule 8 (expression -> function .)


state 7

    (6) expression -> INT .

    $end            reduce using rule 6 (expression -> INT .)
    Space           reduce using rule 6 (expression -> INT .)
    RightSquareBracket reduce using rule 6 (expression -> INT .)


state 8

    (7) expression -> FLOAT .

    $end            reduce using rule 7 (expression -> FLOAT .)
    Space           reduce using rule 7 (expression -> FLOAT .)
    RightSquareBracket reduce using rule 7 (expression -> FLOAT .)


state 9

    (12) function -> Suma . Space operaciones

    Space           shift and go to state 22


state 10

    (13) function -> Inc . Space NAME
    (14) function -> Inc . Space NAME Space expression

    Space           shift and go to state 23


state 11

    (15) function -> Azar . Space expression

    Space           shift and go to state 24


state 12

    (16) function -> Producto . Space operaciones

    Space           shift and go to state 25


state 13

    (17) function -> Potencia . Space expression Space expression

    Space           shift and go to state 26


state 14

    (18) function -> Division . Space expression Space expression

    Space           shift and go to state 27


state 15

    (19) function -> Resto . Space expression Space expression

    Space           shift and go to state 28


state 16

    (20) function -> RC . Space expression

    Space           shift and go to state 29


state 17

    (21) function -> Sen . Space expression

    Space           shift and go to state 30


state 18

    (22) function -> Elegir . Space LeftSquareBracket operaciones RightSquareBracket

    Space           shift and go to state 31


state 19

    (23) function -> Borrapantalla .

    $end            reduce using rule 23 (function -> Borrapantalla .)
    Space           reduce using rule 23 (function -> Borrapantalla .)
    RightSquareBracket reduce using rule 23 (function -> Borrapantalla .)


state 20

    (1) statement -> Var Space . NAME Space EQUALS Space expression
    (4) statement -> Var Space . NAME

    NAME            shift and go to state 32


state 21

    (2) statement -> Inic Space . NAME Space EQUALS Space expression
    (3) statement -> Inic Space . NAME Space EQUALS Space function

    NAME            shift and go to state 33


state 22

    (12) function -> Suma Space . operaciones
    (10) operaciones -> . expression Space expression
    (11) operaciones -> . expression Space operaciones
    (6) expression -> . INT
    (7) expression -> . FLOAT
    (8) expression -> . function
    (9) expression -> . NAME
    (12) function -> . Suma Space operaciones
    (13) function -> . Inc Space NAME
    (14) function -> . Inc Space NAME Space expression
    (15) function -> . Azar Space expression
    (16) function -> . Producto Space operaciones
    (17) function -> . Potencia Space expression Space expression
    (18) function -> . Division Space expression Space expression
    (19) function -> . Resto Space expression Space expression
    (20) function -> . RC Space expression
    (21) function -> . Sen Space expression
    (22) function -> . Elegir Space LeftSquareBracket operaciones RightSquareBracket
    (23) function -> . Borrapantalla

    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    NAME            shift and go to state 3
    Suma            shift and go to state 9
    Inc             shift and go to state 10
    Azar            shift and go to state 11
    Producto        shift and go to state 12
    Potencia        shift and go to state 13
    Division        shift and go to state 14
    Resto           shift and go to state 15
    RC              shift and go to state 16
    Sen             shift and go to state 17
    Elegir          shift and go to state 18
    Borrapantalla   shift and go to state 19

    operaciones                    shift and go to state 34
    expression                     shift and go to state 35
    function                       shift and go to state 6

state 23

    (13) function -> Inc Space . NAME
    (14) function -> Inc Space . NAME Space expression

    NAME            shift and go to state 36


state 24

    (15) function -> Azar Space . expression
    (6) expression -> . INT
    (7) expression -> . FLOAT
    (8) expression -> . function
    (9) expression -> . NAME
    (12) function -> . Suma Space operaciones
    (13) function -> . Inc Space NAME
    (14) function -> . Inc Space NAME Space expression
    (15) function -> . Azar Space expression
    (16) function -> . Producto Space operaciones
    (17) function -> . Potencia Space expression Space expression
    (18) function -> . Division Space expression Space expression
    (19) function -> . Resto Space expression Space expression
    (20) function -> . RC Space expression
    (21) function -> . Sen Space expression
    (22) function -> . Elegir Space LeftSquareBracket operaciones RightSquareBracket
    (23) function -> . Borrapantalla

    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    NAME            shift and go to state 3
    Suma            shift and go to state 9
    Inc             shift and go to state 10
    Azar            shift and go to state 11
    Producto        shift and go to state 12
    Potencia        shift and go to state 13
    Division        shift and go to state 14
    Resto           shift and go to state 15
    RC              shift and go to state 16
    Sen             shift and go to state 17
    Elegir          shift and go to state 18
    Borrapantalla   shift and go to state 19

    expression                     shift and go to state 37
    function                       shift and go to state 6

state 25

    (16) function -> Producto Space . operaciones
    (10) operaciones -> . expression Space expression
    (11) operaciones -> . expression Space operaciones
    (6) expression -> . INT
    (7) expression -> . FLOAT
    (8) expression -> . function
    (9) expression -> . NAME
    (12) function -> . Suma Space operaciones
    (13) function -> . Inc Space NAME
    (14) function -> . Inc Space NAME Space expression
    (15) function -> . Azar Space expression
    (16) function -> . Producto Space operaciones
    (17) function -> . Potencia Space expression Space expression
    (18) function -> . Division Space expression Space expression
    (19) function -> . Resto Space expression Space expression
    (20) function -> . RC Space expression
    (21) function -> . Sen Space expression
    (22) function -> . Elegir Space LeftSquareBracket operaciones RightSquareBracket
    (23) function -> . Borrapantalla

    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    NAME            shift and go to state 3
    Suma            shift and go to state 9
    Inc             shift and go to state 10
    Azar            shift and go to state 11
    Producto        shift and go to state 12
    Potencia        shift and go to state 13
    Division        shift and go to state 14
    Resto           shift and go to state 15
    RC              shift and go to state 16
    Sen             shift and go to state 17
    Elegir          shift and go to state 18
    Borrapantalla   shift and go to state 19

    operaciones                    shift and go to state 38
    expression                     shift and go to state 35
    function                       shift and go to state 6

state 26

    (17) function -> Potencia Space . expression Space expression
    (6) expression -> . INT
    (7) expression -> . FLOAT
    (8) expression -> . function
    (9) expression -> . NAME
    (12) function -> . Suma Space operaciones
    (13) function -> . Inc Space NAME
    (14) function -> . Inc Space NAME Space expression
    (15) function -> . Azar Space expression
    (16) function -> . Producto Space operaciones
    (17) function -> . Potencia Space expression Space expression
    (18) function -> . Division Space expression Space expression
    (19) function -> . Resto Space expression Space expression
    (20) function -> . RC Space expression
    (21) function -> . Sen Space expression
    (22) function -> . Elegir Space LeftSquareBracket operaciones RightSquareBracket
    (23) function -> . Borrapantalla

    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    NAME            shift and go to state 3
    Suma            shift and go to state 9
    Inc             shift and go to state 10
    Azar            shift and go to state 11
    Producto        shift and go to state 12
    Potencia        shift and go to state 13
    Division        shift and go to state 14
    Resto           shift and go to state 15
    RC              shift and go to state 16
    Sen             shift and go to state 17
    Elegir          shift and go to state 18
    Borrapantalla   shift and go to state 19

    expression                     shift and go to state 39
    function                       shift and go to state 6

state 27

    (18) function -> Division Space . expression Space expression
    (6) expression -> . INT
    (7) expression -> . FLOAT
    (8) expression -> . function
    (9) expression -> . NAME
    (12) function -> . Suma Space operaciones
    (13) function -> . Inc Space NAME
    (14) function -> . Inc Space NAME Space expression
    (15) function -> . Azar Space expression
    (16) function -> . Producto Space operaciones
    (17) function -> . Potencia Space expression Space expression
    (18) function -> . Division Space expression Space expression
    (19) function -> . Resto Space expression Space expression
    (20) function -> . RC Space expression
    (21) function -> . Sen Space expression
    (22) function -> . Elegir Space LeftSquareBracket operaciones RightSquareBracket
    (23) function -> . Borrapantalla

    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    NAME            shift and go to state 3
    Suma            shift and go to state 9
    Inc             shift and go to state 10
    Azar            shift and go to state 11
    Producto        shift and go to state 12
    Potencia        shift and go to state 13
    Division        shift and go to state 14
    Resto           shift and go to state 15
    RC              shift and go to state 16
    Sen             shift and go to state 17
    Elegir          shift and go to state 18
    Borrapantalla   shift and go to state 19

    expression                     shift and go to state 40
    function                       shift and go to state 6

state 28

    (19) function -> Resto Space . expression Space expression
    (6) expression -> . INT
    (7) expression -> . FLOAT
    (8) expression -> . function
    (9) expression -> . NAME
    (12) function -> . Suma Space operaciones
    (13) function -> . Inc Space NAME
    (14) function -> . Inc Space NAME Space expression
    (15) function -> . Azar Space expression
    (16) function -> . Producto Space operaciones
    (17) function -> . Potencia Space expression Space expression
    (18) function -> . Division Space expression Space expression
    (19) function -> . Resto Space expression Space expression
    (20) function -> . RC Space expression
    (21) function -> . Sen Space expression
    (22) function -> . Elegir Space LeftSquareBracket operaciones RightSquareBracket
    (23) function -> . Borrapantalla

    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    NAME            shift and go to state 3
    Suma            shift and go to state 9
    Inc             shift and go to state 10
    Azar            shift and go to state 11
    Producto        shift and go to state 12
    Potencia        shift and go to state 13
    Division        shift and go to state 14
    Resto           shift and go to state 15
    RC              shift and go to state 16
    Sen             shift and go to state 17
    Elegir          shift and go to state 18
    Borrapantalla   shift and go to state 19

    expression                     shift and go to state 41
    function                       shift and go to state 6

state 29

    (20) function -> RC Space . expression
    (6) expression -> . INT
    (7) expression -> . FLOAT
    (8) expression -> . function
    (9) expression -> . NAME
    (12) function -> . Suma Space operaciones
    (13) function -> . Inc Space NAME
    (14) function -> . Inc Space NAME Space expression
    (15) function -> . Azar Space expression
    (16) function -> . Producto Space operaciones
    (17) function -> . Potencia Space expression Space expression
    (18) function -> . Division Space expression Space expression
    (19) function -> . Resto Space expression Space expression
    (20) function -> . RC Space expression
    (21) function -> . Sen Space expression
    (22) function -> . Elegir Space LeftSquareBracket operaciones RightSquareBracket
    (23) function -> . Borrapantalla

    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    NAME            shift and go to state 3
    Suma            shift and go to state 9
    Inc             shift and go to state 10
    Azar            shift and go to state 11
    Producto        shift and go to state 12
    Potencia        shift and go to state 13
    Division        shift and go to state 14
    Resto           shift and go to state 15
    RC              shift and go to state 16
    Sen             shift and go to state 17
    Elegir          shift and go to state 18
    Borrapantalla   shift and go to state 19

    expression                     shift and go to state 42
    function                       shift and go to state 6

state 30

    (21) function -> Sen Space . expression
    (6) expression -> . INT
    (7) expression -> . FLOAT
    (8) expression -> . function
    (9) expression -> . NAME
    (12) function -> . Suma Space operaciones
    (13) function -> . Inc Space NAME
    (14) function -> . Inc Space NAME Space expression
    (15) function -> . Azar Space expression
    (16) function -> . Producto Space operaciones
    (17) function -> . Potencia Space expression Space expression
    (18) function -> . Division Space expression Space expression
    (19) function -> . Resto Space expression Space expression
    (20) function -> . RC Space expression
    (21) function -> . Sen Space expression
    (22) function -> . Elegir Space LeftSquareBracket operaciones RightSquareBracket
    (23) function -> . Borrapantalla

    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    NAME            shift and go to state 3
    Suma            shift and go to state 9
    Inc             shift and go to state 10
    Azar            shift and go to state 11
    Producto        shift and go to state 12
    Potencia        shift and go to state 13
    Division        shift and go to state 14
    Resto           shift and go to state 15
    RC              shift and go to state 16
    Sen             shift and go to state 17
    Elegir          shift and go to state 18
    Borrapantalla   shift and go to state 19

    expression                     shift and go to state 43
    function                       shift and go to state 6

state 31

    (22) function -> Elegir Space . LeftSquareBracket operaciones RightSquareBracket

    LeftSquareBracket shift and go to state 44


state 32

    (1) statement -> Var Space NAME . Space EQUALS Space expression
    (4) statement -> Var Space NAME .

    Space           shift and go to state 45
    $end            reduce using rule 4 (statement -> Var Space NAME .)


state 33

    (2) statement -> Inic Space NAME . Space EQUALS Space expression
    (3) statement -> Inic Space NAME . Space EQUALS Space function

    Space           shift and go to state 46


state 34

    (12) function -> Suma Space operaciones .

    $end            reduce using rule 12 (function -> Suma Space operaciones .)
    Space           reduce using rule 12 (function -> Suma Space operaciones .)
    RightSquareBracket reduce using rule 12 (function -> Suma Space operaciones .)


state 35

    (10) operaciones -> expression . Space expression
    (11) operaciones -> expression . Space operaciones

    Space           shift and go to state 47


state 36

    (13) function -> Inc Space NAME .
    (14) function -> Inc Space NAME . Space expression

  ! shift/reduce conflict for Space resolved as shift
    $end            reduce using rule 13 (function -> Inc Space NAME .)
    RightSquareBracket reduce using rule 13 (function -> Inc Space NAME .)
    Space           shift and go to state 48

  ! Space           [ reduce using rule 13 (function -> Inc Space NAME .) ]


state 37

    (15) function -> Azar Space expression .

    $end            reduce using rule 15 (function -> Azar Space expression .)
    Space           reduce using rule 15 (function -> Azar Space expression .)
    RightSquareBracket reduce using rule 15 (function -> Azar Space expression .)


state 38

    (16) function -> Producto Space operaciones .

    $end            reduce using rule 16 (function -> Producto Space operaciones .)
    Space           reduce using rule 16 (function -> Producto Space operaciones .)
    RightSquareBracket reduce using rule 16 (function -> Producto Space operaciones .)


state 39

    (17) function -> Potencia Space expression . Space expression

    Space           shift and go to state 49


state 40

    (18) function -> Division Space expression . Space expression

    Space           shift and go to state 50


state 41

    (19) function -> Resto Space expression . Space expression

    Space           shift and go to state 51


state 42

    (20) function -> RC Space expression .

    $end            reduce using rule 20 (function -> RC Space expression .)
    Space           reduce using rule 20 (function -> RC Space expression .)
    RightSquareBracket reduce using rule 20 (function -> RC Space expression .)


state 43

    (21) function -> Sen Space expression .

    $end            reduce using rule 21 (function -> Sen Space expression .)
    Space           reduce using rule 21 (function -> Sen Space expression .)
    RightSquareBracket reduce using rule 21 (function -> Sen Space expression .)


state 44

    (22) function -> Elegir Space LeftSquareBracket . operaciones RightSquareBracket
    (10) operaciones -> . expression Space expression
    (11) operaciones -> . expression Space operaciones
    (6) expression -> . INT
    (7) expression -> . FLOAT
    (8) expression -> . function
    (9) expression -> . NAME
    (12) function -> . Suma Space operaciones
    (13) function -> . Inc Space NAME
    (14) function -> . Inc Space NAME Space expression
    (15) function -> . Azar Space expression
    (16) function -> . Producto Space operaciones
    (17) function -> . Potencia Space expression Space expression
    (18) function -> . Division Space expression Space expression
    (19) function -> . Resto Space expression Space expression
    (20) function -> . RC Space expression
    (21) function -> . Sen Space expression
    (22) function -> . Elegir Space LeftSquareBracket operaciones RightSquareBracket
    (23) function -> . Borrapantalla

    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    NAME            shift and go to state 3
    Suma            shift and go to state 9
    Inc             shift and go to state 10
    Azar            shift and go to state 11
    Producto        shift and go to state 12
    Potencia        shift and go to state 13
    Division        shift and go to state 14
    Resto           shift and go to state 15
    RC              shift and go to state 16
    Sen             shift and go to state 17
    Elegir          shift and go to state 18
    Borrapantalla   shift and go to state 19

    operaciones                    shift and go to state 52
    expression                     shift and go to state 35
    function                       shift and go to state 6

state 45

    (1) statement -> Var Space NAME Space . EQUALS Space expression

    EQUALS          shift and go to state 53


state 46

    (2) statement -> Inic Space NAME Space . EQUALS Space expression
    (3) statement -> Inic Space NAME Space . EQUALS Space function

    EQUALS          shift and go to state 54


state 47

    (10) operaciones -> expression Space . expression
    (11) operaciones -> expression Space . operaciones
    (6) expression -> . INT
    (7) expression -> . FLOAT
    (8) expression -> . function
    (9) expression -> . NAME
    (10) operaciones -> . expression Space expression
    (11) operaciones -> . expression Space operaciones
    (12) function -> . Suma Space operaciones
    (13) function -> . Inc Space NAME
    (14) function -> . Inc Space NAME Space expression
    (15) function -> . Azar Space expression
    (16) function -> . Producto Space operaciones
    (17) function -> . Potencia Space expression Space expression
    (18) function -> . Division Space expression Space expression
    (19) function -> . Resto Space expression Space expression
    (20) function -> . RC Space expression
    (21) function -> . Sen Space expression
    (22) function -> . Elegir Space LeftSquareBracket operaciones RightSquareBracket
    (23) function -> . Borrapantalla

    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    NAME            shift and go to state 3
    Suma            shift and go to state 9
    Inc             shift and go to state 10
    Azar            shift and go to state 11
    Producto        shift and go to state 12
    Potencia        shift and go to state 13
    Division        shift and go to state 14
    Resto           shift and go to state 15
    RC              shift and go to state 16
    Sen             shift and go to state 17
    Elegir          shift and go to state 18
    Borrapantalla   shift and go to state 19

    expression                     shift and go to state 55
    operaciones                    shift and go to state 56
    function                       shift and go to state 6

state 48

    (14) function -> Inc Space NAME Space . expression
    (6) expression -> . INT
    (7) expression -> . FLOAT
    (8) expression -> . function
    (9) expression -> . NAME
    (12) function -> . Suma Space operaciones
    (13) function -> . Inc Space NAME
    (14) function -> . Inc Space NAME Space expression
    (15) function -> . Azar Space expression
    (16) function -> . Producto Space operaciones
    (17) function -> . Potencia Space expression Space expression
    (18) function -> . Division Space expression Space expression
    (19) function -> . Resto Space expression Space expression
    (20) function -> . RC Space expression
    (21) function -> . Sen Space expression
    (22) function -> . Elegir Space LeftSquareBracket operaciones RightSquareBracket
    (23) function -> . Borrapantalla

    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    NAME            shift and go to state 3
    Suma            shift and go to state 9
    Inc             shift and go to state 10
    Azar            shift and go to state 11
    Producto        shift and go to state 12
    Potencia        shift and go to state 13
    Division        shift and go to state 14
    Resto           shift and go to state 15
    RC              shift and go to state 16
    Sen             shift and go to state 17
    Elegir          shift and go to state 18
    Borrapantalla   shift and go to state 19

    expression                     shift and go to state 57
    function                       shift and go to state 6

state 49

    (17) function -> Potencia Space expression Space . expression
    (6) expression -> . INT
    (7) expression -> . FLOAT
    (8) expression -> . function
    (9) expression -> . NAME
    (12) function -> . Suma Space operaciones
    (13) function -> . Inc Space NAME
    (14) function -> . Inc Space NAME Space expression
    (15) function -> . Azar Space expression
    (16) function -> . Producto Space operaciones
    (17) function -> . Potencia Space expression Space expression
    (18) function -> . Division Space expression Space expression
    (19) function -> . Resto Space expression Space expression
    (20) function -> . RC Space expression
    (21) function -> . Sen Space expression
    (22) function -> . Elegir Space LeftSquareBracket operaciones RightSquareBracket
    (23) function -> . Borrapantalla

    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    NAME            shift and go to state 3
    Suma            shift and go to state 9
    Inc             shift and go to state 10
    Azar            shift and go to state 11
    Producto        shift and go to state 12
    Potencia        shift and go to state 13
    Division        shift and go to state 14
    Resto           shift and go to state 15
    RC              shift and go to state 16
    Sen             shift and go to state 17
    Elegir          shift and go to state 18
    Borrapantalla   shift and go to state 19

    expression                     shift and go to state 58
    function                       shift and go to state 6

state 50

    (18) function -> Division Space expression Space . expression
    (6) expression -> . INT
    (7) expression -> . FLOAT
    (8) expression -> . function
    (9) expression -> . NAME
    (12) function -> . Suma Space operaciones
    (13) function -> . Inc Space NAME
    (14) function -> . Inc Space NAME Space expression
    (15) function -> . Azar Space expression
    (16) function -> . Producto Space operaciones
    (17) function -> . Potencia Space expression Space expression
    (18) function -> . Division Space expression Space expression
    (19) function -> . Resto Space expression Space expression
    (20) function -> . RC Space expression
    (21) function -> . Sen Space expression
    (22) function -> . Elegir Space LeftSquareBracket operaciones RightSquareBracket
    (23) function -> . Borrapantalla

    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    NAME            shift and go to state 3
    Suma            shift and go to state 9
    Inc             shift and go to state 10
    Azar            shift and go to state 11
    Producto        shift and go to state 12
    Potencia        shift and go to state 13
    Division        shift and go to state 14
    Resto           shift and go to state 15
    RC              shift and go to state 16
    Sen             shift and go to state 17
    Elegir          shift and go to state 18
    Borrapantalla   shift and go to state 19

    expression                     shift and go to state 59
    function                       shift and go to state 6

state 51

    (19) function -> Resto Space expression Space . expression
    (6) expression -> . INT
    (7) expression -> . FLOAT
    (8) expression -> . function
    (9) expression -> . NAME
    (12) function -> . Suma Space operaciones
    (13) function -> . Inc Space NAME
    (14) function -> . Inc Space NAME Space expression
    (15) function -> . Azar Space expression
    (16) function -> . Producto Space operaciones
    (17) function -> . Potencia Space expression Space expression
    (18) function -> . Division Space expression Space expression
    (19) function -> . Resto Space expression Space expression
    (20) function -> . RC Space expression
    (21) function -> . Sen Space expression
    (22) function -> . Elegir Space LeftSquareBracket operaciones RightSquareBracket
    (23) function -> . Borrapantalla

    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    NAME            shift and go to state 3
    Suma            shift and go to state 9
    Inc             shift and go to state 10
    Azar            shift and go to state 11
    Producto        shift and go to state 12
    Potencia        shift and go to state 13
    Division        shift and go to state 14
    Resto           shift and go to state 15
    RC              shift and go to state 16
    Sen             shift and go to state 17
    Elegir          shift and go to state 18
    Borrapantalla   shift and go to state 19

    expression                     shift and go to state 60
    function                       shift and go to state 6

state 52

    (22) function -> Elegir Space LeftSquareBracket operaciones . RightSquareBracket

    RightSquareBracket shift and go to state 61


state 53

    (1) statement -> Var Space NAME Space EQUALS . Space expression

    Space           shift and go to state 62


state 54

    (2) statement -> Inic Space NAME Space EQUALS . Space expression
    (3) statement -> Inic Space NAME Space EQUALS . Space function

    Space           shift and go to state 63


state 55

    (10) operaciones -> expression Space expression .
    (10) operaciones -> expression . Space expression
    (11) operaciones -> expression . Space operaciones

  ! shift/reduce conflict for Space resolved as shift
    $end            reduce using rule 10 (operaciones -> expression Space expression .)
    RightSquareBracket reduce using rule 10 (operaciones -> expression Space expression .)
    Space           shift and go to state 47

  ! Space           [ reduce using rule 10 (operaciones -> expression Space expression .) ]


state 56

    (11) operaciones -> expression Space operaciones .

    $end            reduce using rule 11 (operaciones -> expression Space operaciones .)
    Space           reduce using rule 11 (operaciones -> expression Space operaciones .)
    RightSquareBracket reduce using rule 11 (operaciones -> expression Space operaciones .)


state 57

    (14) function -> Inc Space NAME Space expression .

    $end            reduce using rule 14 (function -> Inc Space NAME Space expression .)
    Space           reduce using rule 14 (function -> Inc Space NAME Space expression .)
    RightSquareBracket reduce using rule 14 (function -> Inc Space NAME Space expression .)


state 58

    (17) function -> Potencia Space expression Space expression .

    $end            reduce using rule 17 (function -> Potencia Space expression Space expression .)
    Space           reduce using rule 17 (function -> Potencia Space expression Space expression .)
    RightSquareBracket reduce using rule 17 (function -> Potencia Space expression Space expression .)


state 59

    (18) function -> Division Space expression Space expression .

    $end            reduce using rule 18 (function -> Division Space expression Space expression .)
    Space           reduce using rule 18 (function -> Division Space expression Space expression .)
    RightSquareBracket reduce using rule 18 (function -> Division Space expression Space expression .)


state 60

    (19) function -> Resto Space expression Space expression .

    $end            reduce using rule 19 (function -> Resto Space expression Space expression .)
    Space           reduce using rule 19 (function -> Resto Space expression Space expression .)
    RightSquareBracket reduce using rule 19 (function -> Resto Space expression Space expression .)


state 61

    (22) function -> Elegir Space LeftSquareBracket operaciones RightSquareBracket .

    $end            reduce using rule 22 (function -> Elegir Space LeftSquareBracket operaciones RightSquareBracket .)
    Space           reduce using rule 22 (function -> Elegir Space LeftSquareBracket operaciones RightSquareBracket .)
    RightSquareBracket reduce using rule 22 (function -> Elegir Space LeftSquareBracket operaciones RightSquareBracket .)


state 62

    (1) statement -> Var Space NAME Space EQUALS Space . expression
    (6) expression -> . INT
    (7) expression -> . FLOAT
    (8) expression -> . function
    (9) expression -> . NAME
    (12) function -> . Suma Space operaciones
    (13) function -> . Inc Space NAME
    (14) function -> . Inc Space NAME Space expression
    (15) function -> . Azar Space expression
    (16) function -> . Producto Space operaciones
    (17) function -> . Potencia Space expression Space expression
    (18) function -> . Division Space expression Space expression
    (19) function -> . Resto Space expression Space expression
    (20) function -> . RC Space expression
    (21) function -> . Sen Space expression
    (22) function -> . Elegir Space LeftSquareBracket operaciones RightSquareBracket
    (23) function -> . Borrapantalla

    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    NAME            shift and go to state 3
    Suma            shift and go to state 9
    Inc             shift and go to state 10
    Azar            shift and go to state 11
    Producto        shift and go to state 12
    Potencia        shift and go to state 13
    Division        shift and go to state 14
    Resto           shift and go to state 15
    RC              shift and go to state 16
    Sen             shift and go to state 17
    Elegir          shift and go to state 18
    Borrapantalla   shift and go to state 19

    expression                     shift and go to state 64
    function                       shift and go to state 6

state 63

    (2) statement -> Inic Space NAME Space EQUALS Space . expression
    (3) statement -> Inic Space NAME Space EQUALS Space . function
    (6) expression -> . INT
    (7) expression -> . FLOAT
    (8) expression -> . function
    (9) expression -> . NAME
    (12) function -> . Suma Space operaciones
    (13) function -> . Inc Space NAME
    (14) function -> . Inc Space NAME Space expression
    (15) function -> . Azar Space expression
    (16) function -> . Producto Space operaciones
    (17) function -> . Potencia Space expression Space expression
    (18) function -> . Division Space expression Space expression
    (19) function -> . Resto Space expression Space expression
    (20) function -> . RC Space expression
    (21) function -> . Sen Space expression
    (22) function -> . Elegir Space LeftSquareBracket operaciones RightSquareBracket
    (23) function -> . Borrapantalla

    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    NAME            shift and go to state 3
    Suma            shift and go to state 9
    Inc             shift and go to state 10
    Azar            shift and go to state 11
    Producto        shift and go to state 12
    Potencia        shift and go to state 13
    Division        shift and go to state 14
    Resto           shift and go to state 15
    RC              shift and go to state 16
    Sen             shift and go to state 17
    Elegir          shift and go to state 18
    Borrapantalla   shift and go to state 19

    expression                     shift and go to state 65
    function                       shift and go to state 66

state 64

    (1) statement -> Var Space NAME Space EQUALS Space expression .

    $end            reduce using rule 1 (statement -> Var Space NAME Space EQUALS Space expression .)


state 65

    (2) statement -> Inic Space NAME Space EQUALS Space expression .

    $end            reduce using rule 2 (statement -> Inic Space NAME Space EQUALS Space expression .)


state 66

    (3) statement -> Inic Space NAME Space EQUALS Space function .
    (8) expression -> function .

  ! reduce/reduce conflict for $end resolved using rule 3 (statement -> Inic Space NAME Space EQUALS Space function .)
    $end            reduce using rule 3 (statement -> Inic Space NAME Space EQUALS Space function .)

  ! $end            [ reduce using rule 8 (expression -> function .) ]

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for Space in state 36 resolved as shift
WARNING: shift/reduce conflict for Space in state 55 resolved as shift
WARNING: reduce/reduce conflict in state 66 resolved using rule (statement -> Inic Space NAME Space EQUALS Space function)
WARNING: rejected rule (expression -> function) in state 66
